[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prefabs/GUI/PanelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/PanelTroops.gd" type="Script" id=3]

[node name="PanelTroops" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="TroopRows" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Center/CenterContainer" index="0"]
margin_left = 225.0
margin_top = 268.0
margin_right = 225.0
margin_bottom = 268.0

[connection signal="visibility_changed" from="." to="." method="_on_PanelTroops_visibility_changed"]
